<resources>
    <string name="app_name">Smart Greenhouse</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Greenhouse</string>
    <string name="nav_header_subtitle">github.com/aptennn/SamsungProject</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="information">Умная теплица для проекта по Samsung It School</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="nightmode">Night Mode</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="language">Language</string>
    <string name="info">About</string>
    <string name="description">Description</string>
    <string name="sensors">Sensors</string>
    <string name="humidity_earth">Earth humidity</string>
    <string name="humidity_air">Air humidity</string>
    <string name="greenhouse_number">Greenhouse number</string>
    <string name="greenhouse_login">Login</string>
    <string name="button_exit">Exit</string>
    <string name="click_to_show_login">Click to show greenhouse number</string>
    <string name="feedback">Feedback</string>
</resources>