<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/monday_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />
    <CheckBox
        android:id="@+id/tuesday_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monday_check"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
    <CheckBox
        android:id="@+id/wednesday_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tuesday_check"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
    <CheckBox
        android:id="@+id/thursday_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wednesday_check"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
    <CheckBox
        android:id="@+id/friday_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thursday_check"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
    <CheckBox
        android:id="@+id/saturday_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friday_check"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
    <CheckBox
        android:id="@+id/sunday_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saturday_check"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>