<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lll"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nightmode"
            android:textSize="30sp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
        <Switch
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/action_switch"
            android:text=""
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:switchMinWidth="45dp"
            android:padding="6dp"
            tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/language"
            android:textSize="30sp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/button_rus"
            android:src="@drawable/russia_flag"
            tools:ignore="MissingConstraints"
            app:layout_constraintRight_toLeftOf="@+id/button_eng"
            android:layout_marginEnd="10dp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/button_eng"
            android:src="@drawable/usa_flag"
            tools:ignore="MissingConstraints"
            android:layout_marginEnd="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/button_exit"
    android:text="@string/button_exit"
    android:textStyle="bold"
    android:textAllCaps="false"
    android:textColor="@color/red"
    android:background="@drawable/button_transparent"
    android:textSize="15dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>